Fix style on small screens

--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -55,7 +55,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 160px;
+    /* min-width: 160px; */
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.25);
